chore: add npm release

--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "bunner",
-  "version": "0.0.3",
+  "name": "@glacion/bunner",
+  "version": "0.0.4",
+  "dependencies": {
+    "commander": "^14.0.1"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@tsconfig/strictest": "^2.0.5",
     "@types/bun": "latest"
   },
-  "dependencies": {
-    "commander": "^14.0.1"
+  "files": [
+    "tsconfig.json",
+    "src"
+  ],
+  "repository": {
+    "url": "https://github.com/glacion/bunner"
   }
 }
