--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,17 @@ jobs:
           files: dist/*
           generate_release_notes: true
           make_latest: true
+
+  publish:
+    runs-on: ubuntu-24.04
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+          registry-url: https://registry.npmjs.org
+      - run: npm clean-install
+      - run: npm publish --access=public --provenance
