--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glacion/bunner",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "dependencies": {
     "commander": "^14.0.1"
   },
@@ -14,6 +14,6 @@
     "src"
   ],
   "repository": {
-    "url": "https://github.com/glacion/bunner"
+    "url": "git+ssh://git@github.com/glacion/bunner.git"
   }
 }
