--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "main": "src/index.ts",
   "name": "@glacion/bunner",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "dependencies": {
     "commander": "^14.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@glacion/bunner": "^0.0.5",
     "@tsconfig/strictest": "^2.0.5",
     "@types/bun": "latest"
   },
