--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": ["@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
     "baseUrl": ".",
+    "esModuleInterop": true,
     "lib": ["ESNext"],
     "noEmit": true,
     "resolveJsonModule": true,
