--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: jdx/mise-action@v3
-      - run: bunner bunner:release
+      - run: bun run . bunner:release
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/*
