--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@glacion/bunner",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "dependencies": {
     "commander": "^14.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@glacion/bunner": "^0.0.10",
     "@tsconfig/strictest": "^2.0.5",
     "@types/bun": "latest"
   },
   "files": [
+    "index.ts",
     "tsconfig.json",
     "lib"
   ],
